Number session controller was add

--- a/src/css/controls-style.css
+++ b/src/css/controls-style.css
@@ -77,3 +77,27 @@
 	background-size: 100% 100%;
 	background-repeat: no-repeat;		
 }
+
+.code-enter-window{
+	position: absolute;
+	width: 70%;
+	height: 700px;
+	background-color: black;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
+	margin: auto;
+}
+
+/*It's style for Code input*/
+.code-enter-window input{
+	font-size: 300%;
+	height: 20%;
+}
+/*It's style for Submit button*/
+.code-enter-window button{
+	font-size: 400%;
+	width: 50%;
+	height: 30%;
+}
